# uscit

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  manage.ipynb  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html
.github/workflows/: sphinx.yml
_modules/: index.html  us_it.html  uscit.html
_sources/: index.rst.txt  modules.rst.txt
docs/: requirements.txt
docs/source/: conf.py
notebooks/: e010_gallery.html
src/: us_it.py  uscit.py
