[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "uscit"
version = "23.04.06.1"
authors = [
    { name="diego aliaga", email="daliaga@chacaltaya.edu.bo" },
]
description = "simple package for very common functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/daliagachc/uscit"
"Bug Tracker" = "https://github.com/daliagachc/uscit/issues"